--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,6 +1,107 @@
 /* config.css */
 
-/* helpers/align.css */
+.logo {
+  text-align: center;
+}
+
+.logo img {
+  max-width: 100%;
+  height: auto;
+  max-height: 200px;
+}
+.logo-text {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 24px;
+  color: #fcfcfc;
+  margin-bottom: 40px;
+}
+.logo-text-register {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 24px;
+  color: #fcfcfc;
+  margin-bottom: 5px;
+}
+h1{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 34px;
+  color: #fcfcfc;
+}
+h2{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
+  color: #fcfcfc;
+}
+.graph-description{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 12px;
+  color: #fcfcfc;
+}
+p{
+  color: #fcfcfc;
+}
+.logo-text-register-reg {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 24px;
+  color: #fcfcfc;
+  margin-bottom: 30px;
+}
+
+main {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.dashboard-section {
+  background-color: #434444;
+  display: flex;
+  padding: 20px;
+  margin-bottom: 20px;
+  border-radius: 8px;
+}
+
+.dashboard-section p {
+  margin-bottom: 10px;
+}
+
+.column-left {
+  width: 34%;
+}
+
+.column-right {
+  width: 66%;
+}
+
+.upload-form {
+  margin-bottom: 20px;
+}
+
+.upload-form input[type="file"] {
+  margin-right: 10px;
+}
+button {
+  background-color: #fbfbfb; /* Цвет фона */
+  color: rgb(0, 0, 0); /* Цвет текста */
+  padding: 6px 7px; /* Внутренний отступ */
+  font-size: 12px; /* Размер шрифта */
+  border: none; /* Убираем границу */
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #666666; /* Изменяем цвет фона при наведении */
+}
+
+footer {
+  color: #fff;
+  text-align: center;
+  padding: 1em 0;
+}
+
+.no-ecg-chart p {
+  margin-bottom: 10px;
+}
 
 .align {
     -webkit-box-align: center;
@@ -16,190 +117,189 @@
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-  }
-  
-  /* helpers/grid.css */
-  
-  .grid {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 320px;
-    max-width: 20rem;
-    width: 90%;
-  }
-  
-  /* helpers/hidden.css */
-  
-  .hidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-  }
-  
-  /* helpers/icon.css */
-  
-  .icons {
-    display: none;
-  }
-  
-  .icon {
-    display: inline-block;
-    fill: #606468;
-    font-size: 16px;
-    font-size: 1rem;
-    height: 1em;
-    vertical-align: middle;
-    width: 1em;
-  }
-  
-  /* layout/base.css */
-  
-  * {
-    -webkit-box-sizing: inherit;
-            box-sizing: inherit;
-  }
-  
-  html {
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    font-size: 100%;
-    height: 100%;
-  }
-  
-  body {
-    background-color: #2c3338;
-    color: #606468;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 14px;
-    font-size: 0.875rem;
-    font-weight: 400;
-    height: 100%;
-    line-height: 1.5;
-    margin: 0;
-    min-height: 100vh;
-  }
-  
-  /* modules/anchor.css */
-  
-  a {
-    color: #eee;
-    outline: 0;
-    text-decoration: none;
-  }
-  
-  a:focus,
-  a:hover {
-    text-decoration: underline;
-  }
-  
-  /* modules/form.css */
-  
-  input {
-    background-image: none;
-    border: 0;
-    color: inherit;
-    font: inherit;
-    margin: 0;
-    outline: 0;
-    padding: 0;
-    -webkit-transition: background-color 0.3s;
-    transition: background-color 0.3s;
-  }
-  
-  input[type='submit'] {
-    cursor: pointer;
-  }
-  
-  .form {
-    margin: -14px;
-    margin: -0.875rem;
-  }
-  
-  .form input[type='password'],
-  .form input[type='text'],
-  .form input[type='submit'] {
-    width: 100%;
-  }
-  
-  .form__field {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin: 14px;
-    margin: 0.875rem;
-  }
-  
-  .form__input {
-    -webkit-box-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
-  }
-  
-  /* modules/login.css */
-  
-  .login {
-    color: #eee;
-  }
-  
-  .login label,
-  .login input[type='text'],
-  .login input[type='password'],
-  .login input[type='submit'] {
-    border-radius: 0.25rem;
-    padding: 16px;
-    padding: 1rem;
-  }
-  
-  .login label {
-    background-color: #363b41;
-    border-bottom-right-radius: 0;
-    border-top-right-radius: 0;
-    padding-left: 20px;
-    padding-left: 1.25rem;
-    padding-right: 20px;
-    padding-right: 1.25rem;
-  }
-  
-  .login input[type='password'],
-  .login input[type='text'] {
-    background-color: #3b4148;
-    border-bottom-left-radius: 0;
-    border-top-left-radius: 0;
-  }
-  
-  .login input[type='password']:focus,
-  .login input[type='password']:hover,
-  .login input[type='text']:focus,
-  .login input[type='text']:hover {
-    background-color: #434a52;
-  }
-  
-  .login input[type='submit'] {
-    background-color: #ea4c88;
-    color: #eee;
-    font-weight: 700;
-    text-transform: uppercase;
-  }
-  
-  .login input[type='submit']:focus,
-  .login input[type='submit']:hover {
-    background-color: #d44179;
-  }
-  
-  /* modules/text.css */
-  
-  p {
-    margin-bottom: 24px;
-    margin-bottom: 1.5rem;
-    margin-top: 24px;
-    margin-top: 1.5rem;
-  }
-  
-  .text--center {
-    text-align: center;
-  }
+}
+/* helpers/grid.css */
+
+.grid {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 320px;
+  max-width: 20rem;
+  width: 90%;
+}
+
+/* helpers/hidden.css */
+
+.hidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
+/* helpers/icon.css */
+
+.icons {
+  display: none;
+}
+
+.icon {
+  display: inline-block;
+  fill: #606468;
+  font-size: 16px;
+  font-size: 1rem;
+  height: 1em;
+  vertical-align: middle;
+  width: 1em;
+}
+
+/* layout/base.css */
+
+* {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+html {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: 100%;
+  height: 100%;
+}
+
+body {
+  background-color: #2c3338;
+  color: #606468;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
+  font-size: 0.875rem;
+  font-weight: 400;
+  height: 100%;
+  line-height: 1.5;
+  margin: 0;
+  min-height: 100vh;
+}
+
+/* modules/anchor.css */
+
+a {
+  color: #eee;
+  outline: 0;
+  text-decoration: none;
+}
+
+a:focus,
+a:hover {
+  text-decoration: underline;
+}
+
+/* modules/form.css */
+
+input {
+  background-image: none;
+  border: 0;
+  color: inherit;
+  font: inherit;
+  margin: 0;
+  outline: 0;
+  padding: 0;
+  -webkit-transition: background-color 0.3s;
+  transition: background-color 0.3s;
+}
+
+input[type='submit'] {
+  cursor: pointer;
+}
+
+.form {
+  margin: -14px;
+  margin: -0.875rem;
+}
+
+.form input[type='password'],
+.form input[type='text'],
+.form input[type='submit'] {
+  width: 100%;
+}
+
+.form__field {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 14px;
+  margin: 0.875rem;
+}
+
+.form__input {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+/* modules/login.css */
+
+.login {
+  color: #eee;
+}
+
+.login label,
+.login input[type='text'],
+.login input[type='password'],
+.login input[type='submit'] {
+  border-radius: 0.25rem;
+  padding: 16px;
+  padding: 1rem;
+}
+
+.login label {
+  background-color: #363b41;
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
+  padding-left: 20px;
+  padding-left: 1.25rem;
+  padding-right: 20px;
+  padding-right: 1.25rem;
+}
+
+.login input[type='password'],
+.login input[type='text'] {
+  background-color: #3b4148;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
+}
+
+.login input[type='password']:focus,
+.login input[type='password']:hover,
+.login input[type='text']:focus,
+.login input[type='text']:hover {
+  background-color: #434a52;
+}
+
+.login input[type='submit'] {
+  background-color: #ea4c88;
+  color: #eee;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.login input[type='submit']:focus,
+.login input[type='submit']:hover {
+  background-color: #d44179;
+}
+
+/* modules/text.css */
+
+p {
+  margin-bottom: 24px;
+  margin-bottom: 1.5rem;
+  margin-top: 24px;
+  margin-top: 1.5rem;
+}
+
+.text--center {
+  text-align: center;
+}
