--- a/app/templates/data_analysis.html
+++ b/app/templates/data_analysis.html
@@ -2,26 +2,56 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ECG Visualization</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Панель управления</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="./static/css/style.css">
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
 </head>
-<body>
+<body class="align">
+    <header>
+        <h1>Панель управления</h1>
+    </header>
+    <main>
+        <section class="dashboard-section">
+            <p>Вы вошли в панель управления. Здесь вы можете выполнить различные действия.</p>
+            <!-- Улучшенная форма для загрузки данных в S3 -->
+            <form method="POST" enctype="multipart/form-data" action="{{ url_for('upload_file') }}" class="upload-form">
+                <input type="file" name="files[]" multiple>
+                <button type="submit">Загрузить данные в S3</button>
+            </form>
+            <a href="{{ url_for('logout') }}">Выйти</a>
+        </section>
 
-<div id="ecg-graph"></div>
+        <!-- Блок для отображения графика ЭКГ или сообщения о загрузке -->
+        {% if ecg_data %}
+            <div id="ecg-graph"></div>
 
-<script type="text/javascript">
-    var ecgData = {{ ecg_data | tojson }};
-    
-    // Установите желаемую ширину и высоту графика в пикселях
-    var width = 1200; // Замените этот параметр на нужное значение
-    var height = 800; // Замените этот параметр на нужное значение
-    
-    // Обновите параметры макета для увеличения размера графика
-    ecgData.ecg.layout.width = width;
-    ecgData.ecg.layout.height = height;
-    
-    Plotly.newPlot('ecg-graph', ecgData.ecg.data, ecgData.ecg.layout);
-</script>
-
+            <div class="ecg-chart">
+                <h2>График ЭКГ</h2>
+                <script type="text/javascript">
+                    var ecgData = {{ ecg_data | tojson }};
+                    
+                    // Установите желаемую ширину и высоту графика в пикселях
+                    var width = 1200; // Замените этот параметр на нужное значение
+                    var height = 800; // Замените этот параметр на нужное значение
+                    
+                    // Обновите параметры макета для увеличения размера графика
+                    ecgData.ecg.layout.width = width;
+                    ecgData.ecg.layout.height = height;
+                    
+                    Plotly.newPlot('ecg-graph', ecgData.ecg.data, ecgData.ecg.layout);
+                </script>
+            </div>
+        {% else %}
+            <div class="no-ecg-chart">
+                <p>График ЭКГ не загружен. Загрузите файлы с данными для отображения графика.</p>
+            </div>
+        {% endif %}
+    </main>
+    <footer class="align">
+        <p>&copy; 2023 DPP-company</p>
+    </footer>
 </body>
 </html>
