--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
   <div class="grid">
 
     <div class="logo">
-      <img src="./static/logo.png" alt="Логотип">
+      <img src="./static/images/logo.png" alt="Логотип">
       <div class="logo-text">Heart Rhythm Predictor</div>
     </div>
 
