--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -10,7 +10,7 @@
 
         <div class="grid">
             <div class="logo">
-                <img src="./static/logo.png" alt="Логотип">
+                <img src="./static/images/logo.png" alt="Логотип">
                 <div class="logo-text-register">Heart Rhythm Predictor</div>
                 <div class="logo-text-register-reg">Регистрация</div>
             </div>
