--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,7 +36,7 @@
 
     <p class="text--center">Нет аккаунта? <a href="{{ url_for('register') }}">Зарегистрироваться</a> <svg class="icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/images/icons.svg#arrow-right"></use></svg></p>
     <footer class="align">
-      <p>&copy; 2023 DPP-company</p>
+      <p class="text--center">&copy; 2023 DPP-company</p>
     </footer>
   </div>
 
