--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -58,8 +58,8 @@
                     <div class="graph-description">
                         <div class="bot-icon">
                             <img src="./static/images/bot-icon.png" alt="Иконка бота">
+                            <span>Анализ от доктора бота</span>
                         </div>
-                        <h3>Анализ от доктора бота</h3>
                         <p>{{ selected_ecg_data['text'] }}</p>
                     </div>
                 {% else %}
