--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -9,12 +9,14 @@
   height: auto;
   max-height: 200px;
 }
+
 .logo-text {
   font-family: 'Open Sans', sans-serif;
   font-size: 24px;
   color: #fcfcfc;
   margin-bottom: 40px;
 }
+
 .logo-text-register {
   font-family: 'Open Sans', sans-serif;
   font-size: 24px;
@@ -28,43 +30,50 @@
 }
 
 .bot-icon img {
-  width:40px;
+  width: 40px;
   vertical-align: middle;
   height: auto;
 }
 
-h1{
+h1 {
   font-family: 'Open Sans', sans-serif;
   font-size: 34px;
   color: #fcfcfc;
 }
-h2{
+
+h2 {
   font-family: 'Open Sans', sans-serif;
   font-size: 18px;
   color: #fcfcfc;
 }
+
 .graph-description {
   font-family: 'Open Sans', sans-serif;
   font-size: 12px;
   color: #fcfcfc;
-  max-height: 200px; /* Устанавливаем максимальную высоту блока */
-  overflow: auto; /* Добавляем прокрутку, если текст не помещается */
+  max-height: 200px;
+  /* Устанавливаем максимальную высоту блока */
+  overflow: auto;
+  /* Добавляем прокрутку, если текст не помещается */
 }
 
 .graph-description span {
   font-size: 18px;
-  font-weight: bold; /* Можете настроить размер заголовка по вашему усмотрению */
+  font-weight: bold;
+  /* Можете настроить размер заголовка по вашему усмотрению */
 }
 
 
 .graph-description p {
-  margin-top: 14px; /* Расстояние между заголовком и текстом */
+  margin-top: 14px;
+  /* Расстояние между заголовком и текстом */
 }
 
-p{
+p {
   color: #fcfcfc;
   font-size: 18px;
 }
+
 .logo-text-register-reg {
   font-family: 'Open Sans', sans-serif;
   font-size: 24px;
@@ -105,19 +114,26 @@ main {
 .upload-form input[type="file"] {
   margin-right: 10px;
 }
+
 button {
-  background-color: #ea4c88; /* Цвет фона */
-  color: #fbfbfb; /* Цвет текста */
-  padding: 14px 24px; /* Внутренний отступ */
-  font-size: 14px; /* Размер шрифта */
+  background-color: #ea4c88;
+  /* Цвет фона */
+  color: #fbfbfb;
+  /* Цвет текста */
+  padding: 14px 24px;
+  /* Внутренний отступ */
+  font-size: 14px;
+  /* Размер шрифта */
   font-weight: bold;
-  border: none; /* Убираем границу */
+  border: none;
+  /* Убираем границу */
   border-radius: 5px;
   cursor: pointer;
 }
 
 button:hover {
-  background-color: #666666; /* Изменяем цвет фона при наведении */
+  background-color: #666666;
+  /* Изменяем цвет фона при наведении */
 }
 
 footer {
@@ -131,20 +147,21 @@ footer {
 }
 
 .align {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
+
 /* helpers/grid.css */
 
 .grid {
@@ -188,12 +205,12 @@ footer {
 
 * {
   -webkit-box-sizing: inherit;
-          box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 html {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   font-size: 100%;
   height: 100%;
 }
@@ -263,8 +280,8 @@ input[type='submit'] {
 
 .form__input {
   -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -ms-flex: 1;
+  flex: 1;
 }
 
 /* modules/login.css */
